[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://addons/godot_table/Table.gd" type="Script" id=2]
[ext_resource path="res://src/models/dao/ui/RankList.gd" type="Script" id=3]
[ext_resource path="res://src/models/dao/sqlite/sqlite.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[node name="RankList" type="Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -1139.5
margin_right = 1081.0
margin_bottom = 1139.5
script = ExtResource( 3 )

[node name="DifficultyLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -539.5
margin_right = 541.5
margin_bottom = 313.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "
Easy Mode"
align = 1

[node name="Table" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -399.5
margin_top = -731.5
margin_right = 0.5
margin_bottom = -31.5
rect_scale = Vector2( 2, 2 )
script = ExtResource( 2 )
column_headers = [ "Rank", "Name", "Score", "Date", "ID" ]
min_row_count = 1
rows = [ [ "1", "21", "234", "423", "--" ], [ "243", "243", "243", "243", "--" ], [ "243", "234", "234", "243", "--" ] ]

[node name="DeletionConfirm" type="ConfirmationDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.5
margin_top = -138.0
margin_right = -200.5
margin_bottom = -68.0
rect_scale = Vector2( 4, 4 )
theme = SubResource( 3 )
window_title = "Ensure to delete?"
dialog_autowrap = true

[node name="Sqlite" parent="." instance=ExtResource( 4 )]

[connection signal="CLICK_ROW" from="Table" to="." method="_on_Table_CLICK_ROW"]
[connection signal="confirmed" from="DeletionConfirm" to="." method="_on_DeletionConfirm_confirmed"]
